--- a/website/newsletter/239/index.mdx
+++ b/website/newsletter/239/index.mdx
@@ -1,14 +1,14 @@
 ---
 slug: /239
-title: "This Week In React #239: ..."
-authors: [slorber]
+title: "This Week In React #239: React Compiler, Relay, Intl-T, React Final Form | RN 0.80, New Architecture, iOS prebuilds, Stable JS API, Strict TS API, Expo Router, InstantDB, Granite | TypeBuddy, Worker Threads, ES Modules, H3, Playwright, cosmos.gl"
+authors: [piaskowyk, tomekzaw]
 date: 06-18-2025
 unlisted: true
 ---
 
-Hi everyone!
+Hi everyone! **Krzysztof and Tomasz from [Software Mansion](https://swmansion.com/?utm_source=thisweekinreact)** here 👋
 
-<Todo />
+It's been a fairly calm week for the React ecosystem, but not for the React Native world. Meta has made an exciting announcement about the release of React Native 0.80, where they've decided to officially freeze the Old Architecture. Make sure you're ready to adapt your app to the New Architecture, as it seems like it could be the last moment to do so.
 
 🗓️ [React Summit US](https://reactsummit.us/?utm_source=Newsletter&utm_medium=ThisWeekinReact) - 🇺🇸 New York - 18 & 21 Nov. Final early bird opportunity! Join Addy Osmani (Google Chrome), Shaundai Person (Netflix), Shawn Swyx Wang & more!
 
