--- a/website/newsletter/239/index.mdx
+++ b/website/newsletter/239/index.mdx
@@ -77,6 +77,21 @@ Full session timelines. Core Web Vitals and JS exceptions in context. User journ
 <Todo />
 
 - 💸 [WithFrame - Pre-Built React Native Templates](https://withfra.me)
+- 👀 [shadcn/ui CLI PR \- Support scaffolding components for Expo apps using the CLI and registry system](https://github.com/shadcn-ui/ui/pull/7540)
+- 👀 [Bluesky mobile app PR – enable New Architecture](https://github.com/bluesky-social/social-app/pull/8295)
+- 💬 [Flutter \- Support for iOS 26 “Liquid glass”](https://github.com/flutter/flutter/issues/170310): Interesting to know that Flutter will not add support for iOS 26 and Material 3 Expressive in core.
+- 🐦 [Bring every iOS 26 Liquid Glass feature from WWDC to React Native](https://x.com/saul_sharma/status/1934467342576009254)
+- 🐦 [Speed up iOS e2e test runs with Maestro](https://x.com/janicduplessis/status/1933589353714102511): avoid generating recursive accessibility labels when not needed, will be shipped in 0.81.
+- 📜 [Best React Native Debugging Tools in 2025](https://blog.swmansion.com/best-react-native-debugging-tools-in-2025-a95dcac7a014): An overview of the current state of debugging tools in the React Native ecosystem.
+- 📜 [Simplifying auth flows in Expo Router with protected routes](https://expo.dev/blog/simplifying-auth-flows-with-protected-routes): How to use the new Expo Router's protected routes to control which screens users can see based on their authentication state – directly in your layout files.
+- 📜 [Expo \+ InstantDB – What if useState was your backend?](https://expo.dev/blog/what-if-usestate-was-your-backend): The tutorial shows how, with InstantDB, you can simplify backend communication in your Expo app, providing a useState-like experience.
+- 📦 [Granite – Brownfield-friendly React Native framework for microservice apps](https://github.com/toss/granite)
+- 📦 [React Native Gesture Handler 2.26](https://github.com/software-mansion/react-native-gesture-handler/releases/tag/2.26.0) – RN 0.80 support, relation props in Pressable.
+- 📦 [create-react-native-library 0.51](https://github.com/callstack/react-native-builder-bob/releases/tag/create-react-native-library%400.51.0) – 16 KB page size on Android.
+- 🎥 [Code with Beto – Liquid Glass Bottom Tabs](https://www.youtube.com/watch?v=L5f8Gy91Gv4)
+- 🎥 [Michał Pierzchała – Shrinking Android app size with R8](https://www.youtube.com/watch?v=Ud6TSlnEzCc)
+- 🎙️ [Rocket Ship \#072 – The Frozen Arch, Killing my App & React Native World Domination](https://share.transistor.fm/s/43ce5c20)
+- 🎙️ [RNR 334 – React Native MacOS with Saad Najmi](https://infinite.red/react-native-radio/rnr-334-react-native-macos-with-saad-najmi)
 
 ---
 
