--- a/website/newsletter/239/index.mdx
+++ b/website/newsletter/239/index.mdx
@@ -74,7 +74,21 @@ Full session timelines. Core Web Vitals and JS exceptions in context. User journ
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[![React Native 0.80 overview](/emails/issues/239/RN_banner.png)](https://reactnative.dev/blog/2025/06/12/react-native-0.80)
+
+[**React Native 0.80**](https://reactnative.dev/blog/2025/06/12/react-native-0.80)
+
+This milestone release announces the goal of [Moving Towards a Stable JavaScript API](https://reactnative.dev/blog/2025/06/12/moving-towards-a-stable-javascript-api), an ongoing effort to accurately define the JS and TypeScript APIs. 
+
+Here are the highlights:
+
+- React 19.1: Its new `captureOwnerStack()` API can improve the DX of error overlays.  
+- JavaScript deep imports deprecation: you’ll have to import everything from the root `’react-native’`   
+- Strict TypeScript API (opt in): The Strict TypeScript API is an opt-in preview offering more accurate TypeScript types for the react-native package, generated directly from source code.  
+- Legacy Architecture Freezing & Warnings: The React Native team will now focus on the New Architecture  
+- iOS Prebuilds for React Native: iOS builds are roughly 12% faster thanks to shipping prebuilds for Folly and GLog rather than building them from source. In a future release, the rest of React Native core will be shipped as a prebuild.
+
+---
 
 - 💸 [WithFrame - Pre-Built React Native Templates](https://withfra.me)
 - 👀 [shadcn/ui CLI PR \- Support scaffolding components for Expo apps using the CLI and registry system](https://github.com/shadcn-ui/ui/pull/7540)
