--- a/website/newsletter/239/index.mdx
+++ b/website/newsletter/239/index.mdx
@@ -112,7 +112,16 @@ Here are the highlights:
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 💡 [TypeBuddy](https://github.com/typed-rocks/type-buddy) – write TypeScript types as functions ([playground](https://typed-rocks.github.io/type-buddy/))  
+- 📜 [A new way to style gaps in CSS](https://developer.chrome.com/blog/gap-decorations?hl=en) – gap decorations available for developer trial in Chrome and Edge 139  
+- 📜 [Safari at WWDC '25: The Ghost of Christmas Past](https://infrequently.org/2025/06/the-ghost-of-christmas-past/)   
+- 📜 [Worker Threads in Node.js: A Complete Guide for Multithreading in JavaScript](https://nodesource.com/blog/worker-threads-nodejs-multithreading-in-javascript)  
+- 📜 [Animating zooming using CSS: transform order is important](https://jakearchibald.com/2025/animating-zooming/)  
+- 📜 [Using await at the top level in ES modules](https://allthingssmitty.com/2025/06/16/using-await-at-the-top-level-in-es-modules/) – real-world use cases, constraints and gotchas  
+- 📜 [Dan Abramov – Suppressions of Suppressions](https://overreacted.io/suppressions-of-suppressions/) – some thoughts on linter suppressions and social contracts behind writing software  
+- 📦 [H3 v2 beta \- Fully rewritten on web standards, backward-compatible, faster](https://h3.dev/blog/v2-beta)  
+- 📦 [Playwright v1.52 & v1.53 – Fix with AI, Describable Locators](https://dev.to/playwright/whats-new-in-playwright-v152-v153-fix-with-ai-describable-locators-and-more-dl9)  
+- 📦 [cosmos.gl – High-Performance Graph Visualization Engine from the OpenJS Foundation](https://openjsf.org/blog/introducing-cosmos-gl) 
 
 ---
 
