--- a/website/newsletter/239/index.mdx
+++ b/website/newsletter/239/index.mdx
@@ -129,7 +129,7 @@ Here are the highlights:
 
 [![alt](/emails/issues/239/meme1.jpg)](https://x.com/mrousavy/status/1922994477712453742)
 
-[![alt](/emails/issues/239/meme2.jpg)](https://x.com/SzymonRybczak/status/1925846421548196231)
+[![alt](/emails/issues/239/meme2.jpg)](https://www.linkedin.com/feed/update/urn:li:activity:7339605943137009664)
 
 [![alt](/emails/issues/239/meme3.jpg)](https://nerdy.dev/fathers-day-2025)
 
