--- a/website/newsletter/239/index.mdx
+++ b/website/newsletter/239/index.mdx
@@ -1,9 +1,8 @@
 ---
 slug: /239
-title: "This Week In React #239: ViewTransition, Suspense, TanStack, Zero, Compiler, Intl-T, Final Form | 0.80, Stable APIs, iOS prebuilds, shadcn, Expo Router, InstantDB, Granite | TypeBuddy, Worker Threads, ES Modules, H3, Playwright, cosmos.gl"
+title: "This Week In React #239: ViewTransition, Suspense, TanStack, Zero, Compiler, Intl-T, Final Form | 0.80, Stable APIs, iOS prebuilds, shadcn, Expo Router, InstantDB, Granite | TypeBuddy, Worker Threads, H3, Playwright, cosmos.gl"
 authors: [piaskowyk, tomekzaw]
 date: 06-18-2025
-unlisted: true
 ---
 
 Hi everyone! **Krzysztof and Tomasz from [Software Mansion](https://swmansion.com/?utm_source=thisweekinreact)** here 👋
