--- a/website/newsletter/239/index.mdx
+++ b/website/newsletter/239/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /239
-title: "This Week In React #239: ViewTransition, Suspense, TanStack, Zero, Compiler, Intl-T, Final Form | 0.80, Stable APIs, iOS prebuilds, shadcn, Expo Router, InstantDB, Granite | TypeBuddy, Worker Threads, H3, Playwright, cosmos.gl"
+title: "This Week In React #239: ViewTransition, Suspense, TanStack, Zero, use-mcp, Compiler, Intl-T | 0.80, Stable APIs, iOS prebuilds, shadcn, Expo Router, InstantDB, Granite | TypeBuddy, Worker Threads, H3, Playwright, cosmos.gl"
 authors: [piaskowyk, tomekzaw]
 date: 06-18-2025
 ---
@@ -46,6 +46,7 @@ Even better: code reviews in the IDE are free! That’s right: line-by-line revi
 - 📜 [TanStack Start: the Future of React Frameworks?](https://www.premieroctet.com/blog/en/tanstack-future-react-frameworks): Describes the advantages of the TanStack Start framework, which may potentially become a competitor to well-known frameworks like Remix or Next.js.
 - 📜 [Building the Twitter 1.0 Web Experience](https://largeapps.dev/case-studies/twitter/): A case study on how Twitter Lite PWA was optimized over time and the benefits it brought.
 - 📦 [Relay 20.0 – ESLint plugin update](https://github.com/facebook/relay/releases/tag/v20.0.0)
+- 📦 [use-mcp - A lightweight React hook for connecting to Model Context Protocol servers](https://github.com/modelcontextprotocol/use-mcp)
 - 📦 [Intl-T – A Object-Typed Node-Based i18n Translation Library](https://github.com/nivandres/intl-t)
 - 📦 [React Final Form 7.0 – All modules modernized to TypeScript](https://erikras.com/blog/final-form-to-typescript)
 - 📦 [Meteor 3.3 – Faster Builds with SWC and Bundler Optimizations](https://dev.to/meteor/faster-builds-in-meteor-33-modern-build-stack-with-swc-and-bundler-optimizations-fm2) – 60% faster builds
@@ -99,7 +100,8 @@ Here are the highlights:
 - 📜 [Simplifying auth flows in Expo Router with protected routes](https://expo.dev/blog/simplifying-auth-flows-with-protected-routes): How to use the new Expo Router's protected routes to control which screens users can see based on their authentication state – directly in your layout files.
 - 📜 [Expo \+ InstantDB – What if useState was your backend?](https://expo.dev/blog/what-if-usestate-was-your-backend): The tutorial shows how, with InstantDB, you can simplify backend communication in your Expo app, providing a useState-like experience.
 - 📦 [Granite – Brownfield-friendly React Native framework for microservice apps](https://github.com/toss/granite)
-- 📦 [React Native Gesture Handler 2.26 \- RN 0.80 support, relation props in Pressable](https://github.com/software-mansion/react-native-gesture-handler/releases/tag/2.26.0).
+- 📦 [VisionCamera 4.7 - Android 16 KB page size support](https://github.com/mrousavy/react-native-vision-camera/releases/tag/v4.7.0)
+- 📦 [Gesture Handler 2.26 \- RN 0.80 support, relation props in Pressable](https://github.com/software-mansion/react-native-gesture-handler/releases/tag/2.26.0).
 - 📦 [create-react-native-library 0.51 \- 16 KB page size on Android](https://github.com/callstack/react-native-builder-bob/releases/tag/create-react-native-library%400.51.0).
 - 🎥 [Code with Beto – Liquid Glass Bottom Tabs](https://www.youtube.com/watch?v=L5f8Gy91Gv4)
 - 🎥 [Michał Pierzchała – Shrinking Android app size with R8](https://www.youtube.com/watch?v=Ud6TSlnEzCc)
