--- a/website/newsletter/239/index.mdx
+++ b/website/newsletter/239/index.mdx
@@ -121,6 +121,7 @@ Here are the highlights:
 - 📜 [Dan Abramov – Suppressions of Suppressions](https://overreacted.io/suppressions-of-suppressions/) – some thoughts on linter suppressions and social contracts behind writing software
 - 📦 [H3 v2 beta \- Fully rewritten on web standards, backward-compatible, faster](https://h3.dev/blog/v2-beta)
 - 📦 [Playwright v1.52 & v1.53 – Fix with AI, Describable Locators](https://dev.to/playwright/whats-new-in-playwright-v152-v153-fix-with-ai-describable-locators-and-more-dl9)
+- 📦 [Hono 4.8 - Route Helper, SSG, 3rd party middleware](https://github.com/honojs/hono/releases/tag/v4.8.0)
 - 📦 [cosmos.gl – High-Performance Graph Visualization Engine from the OpenJS Foundation](https://openjsf.org/blog/introducing-cosmos-gl)
 
 ---
