--- a/website/newsletter/239/index.mdx
+++ b/website/newsletter/239/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /239
-title: "This Week In React #239: ViewTransition, Suspense, TanStack, Zero, use-mcp, Compiler, Intl-T | 0.80, Stable APIs, iOS prebuilds, shadcn, Expo Router, InstantDB, Granite | TypeBuddy, Worker Threads, H3, Playwright, cosmos.gl"
+title: "This Week In React #239: ViewTransition, Suspense, TanStack, Zero, use-mcp, Compiler, Intl-T | 0.80, Stable APIs, iOS prebuilds, shadcn, Expo Router, InstantDB, Granite | TypeBuddy, Hono, H3, Playwright, cosmos.gl"
 authors: [piaskowyk, tomekzaw]
 date: 06-18-2025
 ---
