--- a/website/newsletter/239/index.mdx
+++ b/website/newsletter/239/index.mdx
@@ -45,6 +45,7 @@ Even better: code reviews in the IDE are free! That’s right: line-by-line revi
 - 📜 [Zero is Not Local-First. It's Better.](https://jjenzz.com/zero-is-not-local-first-its-better/): Zero library is a new sync engine that offers "partial sync first" rather than a full "local-first" approach, meaning it only syncs the data your application actively queries and uses, making it efficient for apps with large datasets. You don't need to take care of cache invalidation because the server is still the source of truth.
 - 📜 [TanStack Start: the Future of React Frameworks?](https://www.premieroctet.com/blog/en/tanstack-future-react-frameworks): Describes the advantages of the TanStack Start framework, which may potentially become a competitor to well-known frameworks like Remix or Next.js.
 - 📜 [Building the Twitter 1.0 Web Experience](https://largeapps.dev/case-studies/twitter/): A case study on how Twitter Lite PWA was optimized over time and the benefits it brought.
+- 💸 [The Road to Next - Master Full-Stack Web Development with Next.js 15 and React 19](https://www.road-to-next.com/?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_1.1)
 - 📦 [Relay 20.0 – ESLint plugin update](https://github.com/facebook/relay/releases/tag/v20.0.0)
 - 📦 [use-mcp - A lightweight React hook for connecting to Model Context Protocol servers](https://github.com/modelcontextprotocol/use-mcp)
 - 📦 [Intl-T – A Object-Typed Node-Based i18n Translation Library](https://github.com/nivandres/intl-t)
