--- a/website/newsletter/239/index.mdx
+++ b/website/newsletter/239/index.mdx
@@ -51,6 +51,7 @@ Even better: code reviews in the IDE are free! That’s right: line-by-line revi
 - 📦 [Intl-T – A Object-Typed Node-Based i18n Translation Library](https://github.com/nivandres/intl-t)
 - 📦 [React Final Form 7.0 – All modules modernized to TypeScript](https://erikras.com/blog/final-form-to-typescript)
 - 📦 [Meteor 3.3 – Faster Builds with SWC and Bundler Optimizations](https://dev.to/meteor/faster-builds-in-meteor-33-modern-build-stack-with-swc-and-bundler-optimizations-fm2) – 60% faster builds
+- 🎥 [Theo – Defending SQL in JSX](https://www.youtube.com/watch?v=PmXZvGtB7_U)
 - 🎥 [Shruti Kapoor – You’re Managing State Wrong in React](https://www.youtube.com/watch?v=c7FQP-tUn1U)
 - 🎥 [Future Frontend Conf – YouTube Playlist](http://youtube.com/watch?v=xadj32ExtWo&list=PLKGgD1M40S4hHnZtFi_kPgRRjMay_2KMp)
 
