--- a/website/newsletter/240/index.mdx
+++ b/website/newsletter/240/index.mdx
@@ -28,14 +28,10 @@ import Support from "../_support.mdx";
 
 AG Grid is a fast, free and fully customisable React Data Grid. Used by **90% of the Fortune 500**, AG Grid is **100% open source** with over **4 million npm downloads per month**:
 
-*   🆓 **Free:** Access 100s of features such as **Sorting**, **Filtering**, **Pagination**, **Cell Editing** and more, all for **free** - forever.
-    
-*   **🚀 Fast:** Display **millions of cells** out of the box, without compromising on performance.
-    
-*   **🎨 Customisable:** Add your own components to cells, rows & columns and use **100+ CSS variables** to style every element.
-    
-*   🏢 **Enterprise Features:** Purchase a licence for lifetime access to advanced features including **Pivoting**, **Grouping**, **Master / Detail** and **Integrated Charts** (powered by our React Charting Library, [AG Charts](https://www.ag-grid.com/charts?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=2025-email-2)). Try it for free - no trial license required.
-    
+- 🆓 **Free:** Access 100s of features such as **Sorting**, **Filtering**, **Pagination**, **Cell Editing** and more, all for **free** - forever.
+- **🚀 Fast:** Display **millions of cells** out of the box, without compromising on performance.
+- **🎨 Customisable:** Add your own components to cells, rows & columns and use **100+ CSS variables** to style every element.
+- 🏢 **Enterprise Features:** Purchase a licence for lifetime access to advanced features including **Pivoting**, **Grouping**, **Master / Detail** and **Integrated Charts** (powered by our React Charting Library, [AG Charts](https://www.ag-grid.com/charts?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=2025-email-2)). Try it for free - no trial license required.
 
 Learn More: [ag-grid.com](https://www.ag-grid.com/react-table?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=2025-email-2)
 
@@ -46,6 +42,7 @@ Learn More: [ag-grid.com](https://www.ag-grid.com/react-table?utm_source=thiswee
 <Todo />
 
 - 💸 [Strapi - Open-source headless CMS now with AI powered Content Modeling](https://strapi.link/twir2)
+- 💸 [React Certification is Live - Created and reviewed by React Experts - Save up to 54% Off with our Early Bird offer](https://certificates.dev/react?friend=TWIR)
 
 <SubscribeFormEmbed placement="middle" />
 
