--- a/website/newsletter/240/index.mdx
+++ b/website/newsletter/240/index.mdx
@@ -42,7 +42,7 @@ Learn More: [ag-grid.com](https://www.ag-grid.com/react-table?utm_source=thiswee
 <Todo />
 
 - 💸 [Strapi - Open-source headless CMS now with AI powered Content Modeling](https://strapi.link/twir2)
-- 💸 [React Certification is Live - Created and reviewed by React Experts - Save up to 54% Off with our Early Bird offer](https://certificates.dev/react?friend=TWIR)
+- 💸 [React Certification is Live - Created and reviewed by React Experts - Early Bird offer: 54% off during the next 24h!](https://certificates.dev/react?friend=TWIR)
 
 <SubscribeFormEmbed placement="middle" />
 
