--- a/website/newsletter/240/index.mdx
+++ b/website/newsletter/240/index.mdx
@@ -10,7 +10,7 @@ Hi everyone!
 
 Cyril and Matthieu from [Theodo Apps](https://apps.theodo.com/en?utm_source=thisweekinreact) here 👋.
 
-This week in the React ecosystem, there's a bit of a stir around Radix and shadcn/ui. Some devs are weighing alternatives like Base UI, while shadcn urges calm and highlights their long-term adaptability. We’ve also got fresh official guides from the Next.js team and some sharp tooling updates like Vite 7, Apollo Client v4 RC, and Prettier 3.6’s blazing-fast CLI.
+This week in the React ecosystem, there's a bit of a stir around Radix and shadcn/ui. Some devs are weighing alternatives like Base UI, while shadcn highlights their long-term adaptability. We’ve also got fresh official guides from the Next.js team and some tooling updates like Vite 7, Apollo Client v4 RC, and Prettier 3.6’s fast CLI.
 
 On the React Native side, the graphics game is leveling up fast with WebGPU and Skia Graphite unlocking smoother 2D/3D rendering and broader platform support. And if you’re into performance tricks, don’t miss how Reddit shaved 20% off their iOS app size.
 
@@ -57,9 +57,9 @@ Learn More: [ag-grid.com](https://www.ag-grid.com/react-table?utm_source=thiswee
 - 📜 [Prefer Gaps To Margins](https://kyleshevlin.com/prefer-gaps-to-margins/)
 - 📜 [Frontend test coverage with Storybook 9](https://storybook.js.org/blog/frontend-test-coverage-with-storybook-9/)
 - 📦 [Vite 7.0 \- rolldown-vite package, dropped Node18, Default Browser Target Changed to Baseline Widely Available](https://vite.dev/blog/announcing-vite7.html)
-- 📦 [Recharts v3.0](https://github.com/recharts/recharts/releases/tag/v3.0.0): Custom React components inside a chart, portals for tooltips and legends…
-- 📦 [Apollo Client v4.0-rc1](https://github.com/apollographql/apollo-client/releases/tag/%40apollo%2Fclient%404.0.0-rc.1): It will soon be stable, the biggest change being better bundle sizes with ESM and tree-shaking.
-- 📦 [Astro 5.10](https://astro.build/blog/astro-5100/): Adds experimental live collections that can be fetched at runtime instead of build time
+- 📦 [Recharts 3.0 - Custom React components inside a chart, portals for tooltips and legends](https://github.com/recharts/recharts/releases/tag/v3.0.0)
+- 📦 [Apollo Client 4.0-rc1](https://github.com/apollographql/apollo-client/releases/tag/%40apollo%2Fclient%404.0.0-rc.1): It will soon be stable, the biggest change being better bundle sizes with ESM and tree-shaking.
+- 📦 [Astro 5.10 - Experimental live collections that can be fetched at runtime instead of build time](https://astro.build/blog/astro-5100/)
 - 📦 [RedwoodSDK 0.1 \- React framework for building server-side web apps on Cloudflare](https://github.com/redwoodjs/sdk/releases/tag/v0.1.0)
 - 📦 [State in URL 5.0 \- Query Params lib adds Remix support](https://github.com/asmyshlyaev177/state-in-url/releases/tag/v5.0.0)
 - 🎥 [Vercel Ship 2025](https://vercel.com/ship): The keynote announcements are more platform/backend/AI-related, but there are a few talks about [Next.js](http://Next.js).
