--- a/website/newsletter/240/index.mdx
+++ b/website/newsletter/240/index.mdx
@@ -121,8 +121,6 @@ WebGPU and Skia Graphite are transforming React Native by enabling unified GPU-p
 
 ## 🤭 Fun {#fun}
 
-<Todo />
-
-[![alt](/emails/issues/215/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
-
+[![alt](/emails/issues/240/merge-pr.jpg)](https://x.com/Steve8708/status/1928211253744255039)
+[![alt](/emails/issues/240/expo-atlas.jpg)](https://x.com/schlimmson/status/1891533122774413587)
 See ya! 👋
